--- a/src/scss/components/Main.scss
+++ b/src/scss/components/Main.scss
@@ -1,163 +1,156 @@
 @media screen and (min-width: 768px) {
-    .main {
-      max-width: 980px;
-      margin-inline: auto;
-      display: grid;
-      grid-template-columns: 6fr 5fr;
-      gap: 2rem;
-    }
+  .main {
+    max-width: 980px;
+    margin-inline: auto;
+    display: grid;
+    grid-template-columns: 6fr 5fr;
+    gap: 2rem;
   }
-  
-  .hero {
-    margin-bottom: 3rem;
-  }
-  
-  @media screen and (min-width: 768px) {
-    .hero {
-      grid-column: span 2;
-    }
-  }
-  
-  .hero .title {
-    font: var(--font-title-big);
-    margin-bottom: 8px;
-  }
-  
-  .hero .hero__text {
-    font: var(--font-text-big);
-    text-align: center;
-    margin-inline: 4rem;
-    margin-bottom: 1.8rem;
-  }
-  
- 
-  
-  /* FORM */
-  
-  .addForm {
-    margin: 0 20px 5px 20px;
-  
-    box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
-    border: solid 1px rgba(0, 0, 0, 0);
-    background-image: radial-gradient(
-      circle at 50% 50%,
-      var(--color-dusk),
-      #211e2e 92%
-    );
-  }
-  
-  .addForm .title {
-    font: var(--font-title-biggest);
-    margin-block: 18px;
-  }
-  
-  .addForm .addForm__title {
-    position: relative;
-    background-clip: padding-box;
-    padding-block: 0.4rem;
-    margin-block: 0.5rem;
-    border: solid 2px transparent;
-  
-    font: var(--font-title-medium);
-    text-align: center;
-  }
-  
-  .addForm .addForm__title:before {
-    content: '';
-    position: absolute;
-    top: 100%;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  
-    margin-bottom: -2px;
-    border-radius: inherit;
-    background-color: transparent;
-    background-image: linear-gradient(
-      to left,
-      transparent,
-      #343045 25%,
-      #c0b7e8 45%,
-      var(--color-dark-lilac) 65%,
-      #343045 75%,
-      transparent
-    );
-  }
-  
-  .addForm .addForm__group {
-    margin-bottom: 25px;
-  }
-  
-  .addForm .addForm__input {
-    display: block;
-    width: calc(100% - 20px);
-    margin: 10px auto;
-  
-    padding: 8.5px 16px 8.5px 16px;
-    border-radius: 40px;
-    border: solid 2px var(--color-white);
-  
-    color: var(--color-white);
-    background-color: transparent;
-  
-    font: var(--font-normal);
-  }
-  
-  .addForm .addForm__input::placeholder {
-    color: var(--color-white-50);
-  }
-  
-  .addForm .addForm__group--upload {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 25px;
-  }
-  
-  .addForm .addForm__hidden {
-    display: none;
-  }
-  
-  .addForm .addForm__2col {
-    width: calc(100% - 20px);
-    margin: 10px auto;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .addForm .addForm__2col .addForm__input {
-    width: calc((100% - 0.2rem) / 2);
-    margin: 0;
-  }
-  
-  
-  /* COMPONENTS */
-  
-  .title {
-    text-align: center;
-    text-transform: capitalize;
-  }
-  
+}
 
-  
-  
-  
-  /* ICONS */
-  
-  .icon {
-    width: 1.6rem;
-    height: 1.6rem;
-    color: transparent;
-    cursor: pointer;
-    border-radius: 50%;
-    box-shadow: 0 0 5px 0 var(--color-greyish-brown-two);
+.hero {
+  margin-bottom: 3rem;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    grid-column: span 2;
   }
-  
-  .icon__www {
-    background-image: url('../../images/icons/globe-solid.svg');
-  }
-  
-  .icon__github {
-    background-image: url('../../images/icons/github.svg');
-  }
-  
+}
+
+.hero .title {
+  font: var(--font-title-big);
+  margin-bottom: 8px;
+}
+
+.hero .hero__text {
+  font: var(--font-text-big);
+  text-align: center;
+  margin-inline: 4rem;
+  margin-bottom: 1.8rem;
+  color: #fff;
+}
+
+/* FORM */
+
+.addForm {
+  margin: 0 20px 5px 20px;
+
+  box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  border: solid 1px rgba(0, 0, 0, 0);
+  background-image: radial-gradient(
+    circle at 50% 50%,
+    var(--color-dusk),
+    #211e2e 92%
+  );
+}
+
+.addForm .title {
+  font: var(--font-title-biggest);
+  margin-block: 18px;
+}
+
+.addForm .addForm__title {
+  position: relative;
+  background-clip: padding-box;
+  padding-block: 0.4rem;
+  margin-block: 0.5rem;
+  border: solid 2px transparent;
+
+  font: var(--font-title-medium);
+  text-align: center;
+}
+
+.addForm .addForm__title:before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  margin-bottom: -2px;
+  border-radius: inherit;
+  background-color: transparent;
+  background-image: linear-gradient(
+    to left,
+    transparent,
+    #343045 25%,
+    #c0b7e8 45%,
+    var(--color-dark-lilac) 65%,
+    #343045 75%,
+    transparent
+  );
+}
+
+.addForm .addForm__group {
+  margin-bottom: 25px;
+}
+
+.addForm .addForm__input {
+  display: block;
+  width: calc(100% - 20px);
+  margin: 10px auto;
+
+  padding: 8.5px 16px 8.5px 16px;
+  border-radius: 40px;
+  border: solid 2px var(--color-white);
+
+  color: var(--color-white);
+  background-color: transparent;
+
+  font: var(--font-normal);
+}
+
+.addForm .addForm__input::placeholder {
+  color: var(--color-white-50);
+}
+
+.addForm .addForm__group--upload {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+}
+
+.addForm .addForm__hidden {
+  display: none;
+}
+
+.addForm .addForm__2col {
+  width: calc(100% - 20px);
+  margin: 10px auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.addForm .addForm__2col .addForm__input {
+  width: calc((100% - 0.2rem) / 2);
+  margin: 0;
+}
+
+/* COMPONENTS */
+
+.title {
+  text-align: center;
+  text-transform: capitalize;
+}
+
+/* ICONS */
+
+.icon {
+  width: 1.6rem;
+  height: 1.6rem;
+  color: transparent;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0 0 5px 0 var(--color-greyish-brown-two);
+}
+
+.icon__www {
+  background-image: url("../../images/icons/globe-solid.svg");
+}
+
+.icon__github {
+  background-image: url("../../images/icons/github.svg");
+}
