--- a/web/src/scss/App.scss
+++ b/web/src/scss/App.scss
@@ -15,12 +15,12 @@ fieldset {
   --color-black-80: rgba(0, 0, 0, 0.8);
   --color-greyish-brown: #505050;
   --color-greyish-brown-88: rgba(62, 62, 62, 0.88);
-  --color-dusk: #403a5f;
+  --color-dusk: #6a040f;
   --color-greyish-brown-two: #575757;
-  --color-dark: #302c42;
+  --color-dark: #99c1b9;
   --color-warm-grey: #909090;
   --color-white: #ffffff;
-  --color-dark-lilac: #8176af;
+  --color-dark-lilac: #bc4749;
   --color-white-50: rgba(255, 255, 255, 0.5);
 
   /* FONTS */
@@ -60,6 +60,3 @@ fieldset {
   padding: 22px 22px 0 22px;
   background-color: var(--color-dark);
 }
-
-
-
