--- a/web/src/scss/components/InputButton.scss
+++ b/web/src/scss/components/InputButton.scss
@@ -11,12 +11,12 @@
   text-decoration: none;
   text-align: center;
 
-  border-radius: 40px;
-  background-image: linear-gradient(
-    to right,
-    var(--color-dark-lilac) -2%,
-    #c0b7e8 98%
-  );
+  // border-radius: 40px;
+  // background-image: linear-gradient(
+  //   to right,
+  //   var(--color-dark-lilac) -2%,
+  //   #c0b7e8 98%
+  // );
 
   cursor: pointer;
 }
