--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -5,34 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div>
+        <h1>Proyectos molones</h1>
+        <h2>Escaparate en línea para recoger ideas a través de la tecnología</h2>
         <img src="<%= project.image_project %>" alt="<%= project.name_project %>" />
         <div>
-            <h1>
-                <%= project.name_project %>
-            </h1>
-            <p>
-                <%= project.slogan_project %>
-            </p>
-            <p>
-                <%= project.description_project %>
-            </p>
-            <p>
-                <%= project.technologies_project %>
-            </p>
-            <p>
-                <%= project.name_author %>
-            </p>
-            <img src="<%= project.photo_author %>" alt="<%= project.name_project %>" />
-            <a href="<%= project.demo_url %>"></a>
-            <a href="<%= project.repo_url %>"></a>
+            <div>
+                <img src="<%= project.photo_author %>" alt="<%= project.name_project %>" />
+                <p>
+                    <%= project.name_author %>
+                </p>
+                <p>
+                    <%= project.job_author %>
+                </p>
+            </div>
+            <div>
+                <h3>
+                    <%= project.name_project %>
+                </h3>
+                <p>
+                    <%= project.slogan_project %>
+                </p>
+                <p>
+                    <%= project.description_project %>
+                </p>
+                <div>
+                    <p>
+                        <%= project.technologies_project %>
+                    </p>
+                    <a href="<%= project.demo_url %>"></a>
+                    <a href="<%= project.repo_url %>"></a>
 
+                </div>
+            </div>
         </div>
-
-
     </div>
 </body>
 
