--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -13,41 +13,76 @@
 </head>
 
 <body>
-    <div>
-        <h1>Proyectos molones</h1>
-        <h2>Escaparate en línea para recoger ideas a través de la tecnología</h2>
-        <img src="<%= project.image_project %>" alt="<%= project.name_project %>" />
-        <div>
-            <div>
-                <img src="<%= project.photo_author %>" alt="<%= project.name_project %>" />
-                <p>
-                    <%= project.name_author %>
-                </p>
-                <p>
-                    <%= project.job_author %>
-                </p>
-            </div>
-            <div>
-                <h3>
-                    <%= project.name_project %>
-                </h3>
-                <p>
-                    <%= project.slogan_project %>
-                </p>
-                <p>
-                    <%= project.description_project %>
-                </p>
-                <div>
-                    <p>
-                        <%= project.technologies_project %>
-                    </p>
-                    <a href="<%= project.demo_url %>"></a>
-                    <a href="<%= project.repo_url %>"></a>
+    <header class='header'>
+        <a class='header__brand' href='./' title='Haz click para volver a la página inicial'>
+            <img class='header__companyLogo' src="/images/laptop-code-solid.svg" alt='Logo proyectos molones' />
+            <h1 class='header__title'>Proyectos molones</h1>
+        </a>
+        <img class='logoSponsor' src="/images/adalab.png" alt='Logo Adalab' />
+    </header>
 
+    <main>
+        <section class="preview">
+            <h1 class="previewTitle">Proyectos molones</h1>
+            <h2 class="previewSubtitle">Escaparate en línea para recoger ideas a través de la tecnología</h2>
+            <div class="projectImage" style="background-image: url('<%= project.image_project %>')"></div>
+
+            <article class="card">
+                <h2 class="card__projectTitle">
+                    <span class="card__projectTitle--text">
+                        <%= project.name_project %>
+                    </span>
+                </h2>
+
+                <div class="card__author">
+
+                    <div class="card__authorPhoto" style="background-image: url('<%= project.photo_author %>')"></div>
+                    <p class="card__job">
+                        <%= project.job_author %>
+                    </p>
+                    <h3 class="card__name centerName">
+                        <%= project.name_author %>
+                    </h3>
                 </div>
-            </div>
-        </div>
-    </div>
+
+                <div class="card__project">
+                    <h3 class="card__name ">
+                        <%= project.name_project %>
+                    </h3>
+                    <p class="card__slogan">
+                        <%= project.slogan_project %>
+                    </p>
+
+                    <p class="card__description">
+                        <%= project.description_project %>
+                    </p>
+
+                    <div class="card__technicalInfo">
+                        <p class="card__technologies">
+                            <%= project.technologies_project %>
+                        </p>
+
+                        <a class="icon icon__www" href=<%=project.demo_url %> title="Demo project">
+                            <img class="icon__white" src="/images/globe-solid.svg" alt="Texto alternativo de la imagen">
+                        </a>
+                        <a class="icon icon__github" href=<%=project.repo_url %>
+                            title="GitHub repo">
+                            <img class="icon__white" src="/images/github.svg" alt="Texto alternativo de la imagen">
+
+                        </a>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </main>
+
+
+
+
+
+
+
+
 </body>
 
 </html>
