--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -40,7 +45,7 @@
                     <p class="card__job">
                         <%= project.job_author %>
                     </p>
-                    <h3 class="card__name centerName">
+                    <h3 class="card__name centerName cardName">
                         <%= project.name_author %>
                     </h3>
                 </div>
@@ -74,14 +79,10 @@
                 </div>
             </article>
         </section>
+        <footer class='footer'>
+            <img class='logoSponsor' src="/images/adalab.png" alt='Logo Adalab' />
+        </footer>
     </main>
-
-
-
-
-
-
-
 
 </body>
 
