--- a/src/public-css/main.css
+++ b/src/public-css/main.css
@@ -3,9 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
-    background-color: #99c1b9;
-    
-    
+    background-color: #99c1b9;    
+}
+
+
+.mainContainer{
+    display: flex;
+    justify-content: center;
 }
 
 .preview{
@@ -13,6 +17,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    max-width: 70%;
 }
 
 .preview .projectImage {
@@ -57,6 +62,11 @@
     background-clip: content-box, border-box;
   }
   
+  .mainTitle{
+    margin-bottom: 40px;
+    text-align: center;
+    
+  }
   .card .card__projectTitle {
     grid-column: 2;
     position: relative;
@@ -206,6 +216,7 @@
     font-size: 18px;
     color: #fff;
     font-weight: 100;
+    margin-top:10px;
   }
 
   .icon__white {
@@ -237,6 +248,8 @@
     font-family: "Montserrat", sans-serif;
     text-transform: capitalize;
     color: #fff;
+    font-size: 14px;
+    font-weight: 100;
     
   }
 
