--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -19,7 +19,7 @@
 
 <body>
     <header class='header'>
-        <a class='header__brand' href='./' title='Haz click para volver a la página inicial'>
+        <a class='header__brand' href='http://localhost:5173/' title='Haz click para volver a la página inicial'>
             <img class='header__companyLogo' src="/images/laptop-code-solid.svg" alt='Logo proyectos molones' />
             <h1 class='header__title'>Proyectos molones</h1>
         </a>
