--- a/web/src/scss/components/CardUrl.scss
+++ b/web/src/scss/components/CardUrl.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  border: 3px dashed black;
+  border-radius: 20px;
   height: 100px;
   justify-content: center;
   align-items: center;
