--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -26,7 +26,14 @@
         <img class='logoSponsor' src="/images/adalab.png" alt='Logo Adalab' />
     </header>
 
-    <main class="mainContainer">
+
+
+    <main>
+        <div id="wrapper">
+            <a id='button--link' href='http://localhost:5173/'> VER PROYECTOS</a>
+            <a id='button--link' href='http://localhost:5173/#/addnewproject' > CREAR UN NUEVO PROYECTO</a>
+        </div>
+    <div class="mainContainer">
         <section class="preview">
             <div class="mainTitle">
                 <h1 class="previewTitle">Proyectos molones</h1>
@@ -81,7 +88,8 @@
                 </div>
             </article>
         </section>
-    </main>
+    </div>
+</main>
     <footer class='footer'>
         <img class='logoSponsor' src="/images/adalab.png" alt='Logo Adalab' />
     </footer>
