--- a/web/src/scss/components/Preview.scss
+++ b/web/src/scss/components/Preview.scss
@@ -8,8 +8,7 @@
 }
 
 .preview .card {
-  margin-inline: 20px;
-
+width: 100%;
   transform: translateY(-45px);
 }
 
@@ -70,9 +69,9 @@
 }
 
 /* Media query para pantallas con ancho igual o mayor a 768px */
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .card {
-    width: 100%;
+    width: 75%;
       margin-right: 0; 
   }
 }
