--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -19,7 +19,8 @@
 
 <body>
     <header class='header'>
-        <a class='header__brand' href='http://localhost:5173/' title='Haz click para volver a la página inicial'>
+        <a class='header__brand' href='https://proyectosmolonescreactivas.onrender.com/'
+            title='Haz click para volver a la página inicial'>
             <img class='header__companyLogo' src="/images/laptop-code-solid.svg" alt='Logo proyectos molones' />
             <h1 class='header__title'>Proyectos molones</h1>
         </a>
@@ -30,66 +31,69 @@
 
     <main>
         <div id="wrapper">
-            <a id='button--link' href='http://localhost:5173/'> VER PROYECTOS</a>
-            <a id='button--link' href='http://localhost:5173/#/addnewproject' > CREAR UN NUEVO PROYECTO</a>
+            <a id='button--link' href='https://proyectosmolonescreactivas.onrender.com/'> VER PROYECTOS</a>
+            <a id='button--link' href='https://proyectosmolonescreactivas.onrender.com/#/addnewproject'> CREAR UN NUEVO
+                PROYECTO</a>
         </div>
-    <div class="mainContainer">
-        <section class="preview">
-            <div class="mainTitle">
-                <h1 class="previewTitle">Proyectos molones</h1>
-                <h2 class="previewSubtitle">Escaparate en línea para recoger ideas a través de la tecnología</h2>
-            </div>
-            <div class="projectImage" style="background-image: url('<%= project.image_project %>')"></div>
-
-            <article class="card">
-                <h2 class="card__projectTitle">
-                    <span class="card__projectTitle--text">
-                        <%= project.name_project %>
-                    </span>
-                </h2>
-
-                <div class="card__author">
-
-                    <div class="card__authorPhoto" style="background-image: url('<%= project.photo_author %>')"></div>
-                    <p class="card__job">
-                        <%= project.job_author %>
-                    </p>
-                    <h3 class="card__name centerName cardName">
-                        <%= project.name_author %>
-                    </h3>
+        <div class="mainContainer">
+            <section class="preview">
+                <div class="mainTitle">
+                    <h1 class="previewTitle">Proyectos molones</h1>
+                    <h2 class="previewSubtitle">Escaparate en línea para recoger ideas a través de la tecnología</h2>
                 </div>
+                <div class="projectImage" style="background-image: url('<%= project.image_project %>')"></div>
 
-                <div class="card__project">
-                    <h3 class="card__name ">
-                        <%= project.name_project %>
-                    </h3>
-                    <p class="card__slogan">
-                        <%= project.slogan_project %>
-                    </p>
+                <article class="card">
+                    <h2 class="card__projectTitle">
+                        <span class="card__projectTitle--text">
+                            <%= project.name_project %>
+                        </span>
+                    </h2>
 
-                    <p class="card__description">
-                        <%= project.description_project %>
-                    </p>
+                    <div class="card__author">
 
-                    <div class="card__technicalInfo">
-                        <p class="card__technologies">
-                            <%= project.technologies_project %>
+                        <div class="card__authorPhoto" style="background-image: url('<%= project.photo_author %>')">
+                        </div>
+                        <p class="card__job">
+                            <%= project.job_author %>
+                        </p>
+                        <h3 class="card__name centerName cardName">
+                            <%= project.name_author %>
+                        </h3>
+                    </div>
+
+                    <div class="card__project">
+                        <h3 class="card__name ">
+                            <%= project.name_project %>
+                        </h3>
+                        <p class="card__slogan">
+                            <%= project.slogan_project %>
                         </p>
 
-                        <a class="icon icon__www" href=<%=project.demo_url %> title="Demo project">
-                            <img class="icon__white" src="/images/globe-solid.svg" alt="Texto alternativo de la imagen">
-                        </a>
-                        <a class="icon icon__github" href=<%=project.repo_url %>
-                            title="GitHub repo">
-                            <img class="icon__white" src="/images/github.svg" alt="Texto alternativo de la imagen">
+                        <p class="card__description">
+                            <%= project.description_project %>
+                        </p>
 
-                        </a>
+                        <div class="card__technicalInfo">
+                            <p class="card__technologies">
+                                <%= project.technologies_project %>
+                            </p>
+
+                            <a class="icon icon__www" href=<%=project.demo_url %> title="Demo project">
+                                <img class="icon__white" src="/images/globe-solid.svg"
+                                    alt="Texto alternativo de la imagen">
+                            </a>
+                            <a class="icon icon__github" href=<%=project.repo_url %>
+                                title="GitHub repo">
+                                <img class="icon__white" src="/images/github.svg" alt="Texto alternativo de la imagen">
+
+                            </a>
+                        </div>
                     </div>
-                </div>
-            </article>
-        </section>
-    </div>
-</main>
+                </article>
+            </section>
+        </div>
+    </main>
     <footer class='footer'>
         <img class='logoSponsor' src="/images/adalab.png" alt='Logo Adalab' />
     </footer>
