--- a/web/src/scss/components/Main.scss
+++ b/web/src/scss/components/Main.scss
@@ -40,11 +40,7 @@
 
   box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
   border: solid 1px rgba(0, 0, 0, 0);
-  background-image: radial-gradient(
-    circle at 50% 50%,
-    var(--color-dusk),
-    #bc4b51 92%
-  );
+  background-color: #bc4b51;
 }
 .title2 {
   color: white;
@@ -81,15 +77,16 @@
   margin-bottom: -2px;
   border-radius: inherit;
   background-color: transparent;
-  background-image: linear-gradient(
-    to left,
-    transparent,
-    #343045 25%,
-    #c0b7e8 45%,
-    var(--color-dark-lilac) 65%,
-    #343045 75%,
-    transparent
-  );
+  border: dotted 1px white;
+  // background-image: linear-gradient(
+  //   to left,
+  //   transparent,
+  //   #343045 25%,
+  //   #c0b7e8 45%,
+  //   var(--color-dark-lilac) 65%,
+  //   #343045 75%,
+  //   transparent
+  // );
 }
 
 .addForm .addForm__group {
@@ -162,4 +159,23 @@
 
 .icon__github {
   background-image: url('../../images/icons/github.svg');
+}
+.containeReset {
+  display: flex;
+  justify-content: center;
+}
+
+.buttonReset {
+  padding: 7px 20px;
+  border-radius: 8rem;
+  margin: 5px;
+  border: none;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bolder;
+  background-color: #658881;
+  color: white;
+  cursor: pointer;
+}
+.buttonReset:hover {
+  background-color: #6a040f;
 }
