--- a/src/public-css/main.css
+++ b/src/public-css/main.css
@@ -1,285 +1,267 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Montserrat", sans-serif;
-    background-color: #99c1b9;    
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #99c1b9;
 }
 
-
-.mainContainer{
-    display: flex;
-    justify-content: center;
+.mainContainer {
+  display: flex;
+  justify-content: center;
 }
 
-.preview{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    max-width: 70%;
+.preview {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  max-width: 70%;
 }
 
 .preview .projectImage {
-    width: 80%;
-    aspect-ratio: 1 / 1;
-    outline: solid 1px pink;
-    background-position: top center;
-    background-size: cover;
-  }
-  
-  .preview .card {
-    margin-inline: 20px;
-    transform: translateY(-45px);
-  }
-  
-  .card {
-    width: 100%;
-    display: grid;
-    grid-template-columns: 40% 60%;
-  
-    color: #000;
-    font-family: "Montserrat", sans-serif;
-  
-    border-radius: 20px;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    border-style: solid;
-    border-width: 1px;
-    border-image-source: linear-gradient(
-      to bottom,
-      #fff 0%,
-      rgba(0, 0, 0, 0)
-    );
-    border-image-slice: 1;
-    background-image: linear-gradient(
-        to bottom,
-        #fff,
-        #fff
-      ),
-      linear-gradient(to bottom, #fff 0%, rgba(0, 0, 0, 0));
-    background-origin: border-box;
-    background-clip: content-box, border-box;
-  }
-  
-  .mainTitle{
-    margin-bottom: 40px;
-    text-align: center;
-    
-  }
-  .card .card__projectTitle {
-    grid-column: 2;
-    position: relative;
-    margin: 15px 10px 1rem 0;
-    text-align: center;
-    text-transform: capitalize;
-    background-color: #fff;
-    font: var(--font-card-section);
-  }
-  
-  .card .card__projectTitle::before {
-    content: "";
-    position: absolute;
-    top: calc(50% - 1px);
-    bottom: calc(50% - 1px);
-    left: 0;
-    right: 0;
-    z-index: 0;
-  
-    background-image: linear-gradient(
-      to right,
-      white,
-      #232323 15%,
-      #000,
-      #232323 85%,
-      white
-    );
-  }
-  
-  .card .card__projectTitle--text {
-    position: relative;
-    padding-inline: 0.1em;
-    z-index: 1;
-    background-color: #fff;
-    color: #302c42;
-    font-size: 10px;
-  }
-  
-  .card .card__author {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
-    background-color: #fff;
-  }
-  
-  .card .card__authorPhoto {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    background-position: center;
-    background-size: cover;
-    margin-bottom: 0.8rem;
-    background-color: #fff;
-  }
-  
-  .card .card__job {
-    font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    margin-bottom: 0.2rem;
-    background-color: #fff;
-    font-size: 16px;
-    color: #909090;
-  }
-  .centerName {
-    text-align: center;
-  }
-  .card .card__name {
-    background-color: #fff;
-    font-family: "Poppins", sans-serif;
-    font-size: 24px;
-    font-weight: 500;
-    margin-bottom: 0.2rem;
-  }
+  width: 80%;
+  aspect-ratio: 1 / 1;
+  outline: solid 1px pink;
+  background-position: top center;
+  background-size: cover;
+}
 
-  .cardName {
-    font-size: 18px !important;
-  }
-  
-  .card .card__project {
-    margin-right: 10px;
-    background-color: #fff;
-  }
-  
-  .card .card__slogan {
-    font-family: "Poppins", sans-serif;
-    margin-top: -0.2rem;
-    margin-bottom: 0.8rem;
-    background-color: #fff;
-    color: #575757;
-    font-size: 16px;
-  }
+.preview .card {
+  margin-inline: 20px;
+  transform: translateY(-45px);
+}
 
-  .card__description{
-    background-color: #fff;
-    font-size: 12px;
-    font-family: "Poppins", sans-serif;
-    color: #505050;
-    
-  }
-  
-  .card .card__descriptionTitle {
-    font-weight: inherit;
-    text-transform: capitalize;
-    background-color: #fff;
-  }
-  
-  .card .card__technicalInfo {
-    display: grid;
-    grid-template-columns: 1fr 2rem 2rem;
-    gap: 0.5em;
-    background-color: #fff;
-    margin-block: 1.8rem;
-  }
-  
-  .card .card__technologies {
-    font-family: "Montserrat", sans-serif;
-    text-align: center;
-    font-size: 12px;
-    color: #505050;
-    
-  }
-  
-    .card__technologies{
-        background-color:rgba(0, 0, 0, 0.075);
-        border-radius: 15px;
-    }
+.card {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 40% 60%;
 
-  .icon {
-    width: 1.6rem;
-    height: 1.6rem;
-    color: transparent;
-    cursor: pointer;
-    border-radius: 50%;
-    
-    background-color: #fff;
-  }
-  
-  .previewTitle{
-    font-size: 40px;
-    color: #fff;
-    
-  }
+  color: #000;
+  font-family: 'Montserrat', sans-serif;
 
-  .previewSubtitle{
-    text-align: center;
-    font-size: 18px;
-    color: #fff;
-    font-weight: 100;
-    margin-top:10px;
-  }
+  border-radius: 20px;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border-style: solid;
+  border-width: 1px;
+  border-image-source: linear-gradient(to bottom, #fff 0%, rgba(0, 0, 0, 0));
+  border-image-slice: 1;
+  background-image: linear-gradient(to bottom, #fff, #fff),
+    linear-gradient(to bottom, #fff 0%, rgba(0, 0, 0, 0));
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
 
-  .icon__white {
-    background-color: #fff;
+.mainTitle {
+  margin-bottom: 40px;
+  text-align: center;
+}
+.card .card__projectTitle {
+  grid-column: 2;
+  position: relative;
+  margin: 15px 10px 1rem 0;
+  text-align: center;
+  text-transform: capitalize;
+  background-color: #fff;
+  font: var(--font-card-section);
+}
 
-  }
+.card .card__projectTitle::before {
+  content: '';
+  position: absolute;
+  top: calc(50% - 1px);
+  bottom: calc(50% - 1px);
+  left: 0;
+  right: 0;
+  z-index: 0;
 
+  background-image: linear-gradient(
+    to right,
+    white,
+    #232323 15%,
+    #000,
+    #232323 85%,
+    white
+  );
+}
+
+.card .card__projectTitle--text {
+  position: relative;
+  padding-inline: 0.1em;
+  z-index: 1;
+  background-color: #fff;
+  color: #302c42;
+  font-size: 10px;
+}
+
+.card .card__author {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
+  background-color: #fff;
+}
+
+.card .card__authorPhoto {
+  width: 75px;
+  height: 75px;
+  border-radius: 50%;
+  background-position: center;
+  background-size: cover;
+  margin-bottom: 0.8rem;
+  background-color: #fff;
+}
+
+.card .card__job {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 200;
+  margin-bottom: 0.2rem;
+  background-color: #fff;
+  font-size: 16px;
+  color: #909090;
+}
+.centerName {
+  text-align: center;
+}
+.card .card__name {
+  background-color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 0.2rem;
+}
+
+.cardName {
+  font-size: 18px !important;
+}
+
+.card .card__project {
+  margin-right: 10px;
+  background-color: #fff;
+}
+
+.card .card__slogan {
+  font-family: 'Poppins', sans-serif;
+  margin-top: -0.2rem;
+  margin-bottom: 0.8rem;
+  background-color: #fff;
+  color: #575757;
+  font-size: 16px;
+}
+
+.card__description {
+  background-color: #fff;
+  font-size: 12px;
+  font-family: 'Poppins', sans-serif;
+  color: #505050;
+}
+
+.card .card__descriptionTitle {
+  font-weight: inherit;
+  text-transform: capitalize;
+  background-color: #fff;
+}
+
+.card .card__technicalInfo {
+  display: grid;
+  grid-template-columns: 1fr 2rem 2rem;
+  gap: 0.5em;
+  background-color: #fff;
+  margin-block: 1.8rem;
+}
+
+.card .card__technologies {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  font-size: 12px;
+  color: #505050;
+}
+
+.card__technologies {
+  background-color: rgba(0, 0, 0, 0.075);
+  border-radius: 15px;
+}
+
+.icon {
+  width: 1.6rem;
+  height: 1.6rem;
+  color: transparent;
+  cursor: pointer;
+  border-radius: 50%;
+
+  background-color: #fff;
+}
+
+.previewTitle {
+  font-size: 40px;
+  color: #fff;
+}
+
+.previewSubtitle {
+  text-align: center;
+  font-size: 18px;
+  color: #fff;
+  font-weight: 100;
+  margin-top: 10px;
+}
+
+.icon__white {
+  background-color: #fff;
+}
 
 .header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2.5rem;
-  }
-  
-  .header .header__brand {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 7px 5px;
-    gap: 7px;
-  }
-  
-  .header .header__companyLogo {
-    height: 31px;
-    color: #fff;
-  }
-  
-  .header .header__title {
-    font-family: "Montserrat", sans-serif;
-    text-transform: capitalize;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 100;
-    
-  }
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2.5rem;
+}
 
-  .footer {
-    display: flex;
-    justify-content: center;
-    padding: 19px;
-  }
+.header .header__brand {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 7px 5px;
+  gap: 7px;
+}
 
-  .logoSponsor {
-    height: 46px;
-  }
+.header .header__companyLogo {
+  height: 31px;
+  color: #fff;
+}
 
+.header .header__title {
+  font-family: 'Montserrat', sans-serif;
+  text-transform: capitalize;
+  color: #fff;
+  font-size: 14px;
+  font-weight: 100;
+}
 
-  #button--link {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 10px;
-    font-size: 10px;
-    text-decoration: none;
-    color: white;
-    border-image-slice: 1;
-    border-radius: 20px;
-    background-color: #bc4b51;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-  
-  #button--link:hover {
-    background-color: pink;
-    border-color: pink;
-  }
-  
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 19px;
+}
+
+.logoSponsor {
+  height: 46px;
+}
+
+#button--link {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 10px;
+  text-decoration: none;
+  color: white;
+  border-image-slice: 1;
+  border-radius: 20px;
+  background-color: #bc4b51;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+#button--link:hover {
+  background-color: pink;
+  border-color: pink;
+}
