--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -19,7 +19,7 @@
 
 <body>
     <header class='header'>
-        <a class='header__brand' href='https://proyectosmolonescreactivas.onrender.com/'
+        <a class='header__brand' href='https://proyectosmolonescreactivas.onrender.com/projectlist'
             title='Haz click para volver a la página inicial'>
             <img class='header__companyLogo' src="/images/laptop-code-solid.svg" alt='Logo proyectos molones' />
             <h1 class='header__title'>Proyectos molones</h1>
@@ -32,8 +32,7 @@
     <main>
         <div id="wrapper">
             <a id='button--link' href='https://proyectosmolonescreactivas.onrender.com/'> VER PROYECTOS</a>
-            <a id='button--link' href='https://proyectosmolonescreactivas.onrender.com/#/addnewproject'> CREAR UN NUEVO
-                PROYECTO</a>
+
         </div>
         <div class="mainContainer">
             <section class="preview">
